--- a/pages/index.html
+++ b/pages/index.html
@@ -4,6 +4,29 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>KRDS themplate</title>
+        <link rel="stylesheet" href="../resources/css/styles.css" />
     </head>
-    <body></body>
+    <body>
+        <div id="wrap">
+            <header>
+                <h1><a href="#">logo</a></h1>
+                <nav id="gnb">
+                    <ul>
+                        <li>
+                            <a href="#">menu1</a>
+                            <ul>
+                                <li><a href="#">menu1-1</a></li>
+                                <li><a href="#">menu1-2</a></li>
+                                <li><a href="#">menu1-3</a></li>
+                                <li><a href="#">menu1-4</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#">menu2</a></li>
+                        <li><a href="#">menu3</a></li>
+                        <li><a href="#">menu4</a></li>
+                    </ul>
+                </nav>
+            </header>
+        </div>
+    </body>
 </html>
